Tuning for big bulk load